--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "sass": "^1.77.0",
-    "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/vue": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.8"
+    "prettier": "3.2.5",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.8",
+    "vue": "^3.4.27"
   }
 }
