--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "sass": "^1.77.0",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue3-touch-events": "^4.1.8"
   },
   "devDependencies": {
     "@types/vue": "^2.0.0",
