--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "useDefineForClassFields": true,
     "lib": ["esnext", "dom"],
     "allowImportingTsExtensions": true,
-    "noEmit": true
+    "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/data.ts"]
 }
